Semana01/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/usr/share/bluej/userlib/apache-csv.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/courserajava.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/paulo.freitas/workspaceCursos/Coursera
-d
/home/paulo.freitas/workspaceCursos/Coursera/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/paulo.freitas/workspaceCursos/Coursera/WordsLengths.java
<---- end of javadoc command ---->
Loading source file /home/paulo.freitas/workspaceCursos/Coursera/WordsLengths.java...
Constructing Javadoc information...
/home/paulo.freitas/workspaceCursos/Coursera/WordsLengths.java:10: error: cannot find symbol
    public void countWordLengths(FileResource resource, int[] counts){
                                 ^
  symbol:   class FileResource
  location: class WordsLengths
Standard Doclet version 1.8.0_101
Building tree for all the packages and classes...
Generating /home/paulo.freitas/workspaceCursos/Coursera/doc/WordsLengths.html...
Generating /home/paulo.freitas/workspaceCursos/Coursera/doc/package-frame.html...
Generating /home/paulo.freitas/workspaceCursos/Coursera/doc/package-summary.html...
Generating /home/paulo.freitas/workspaceCursos/Coursera/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /home/paulo.freitas/workspaceCursos/Coursera/doc/allclasses-frame.html...
Generating /home/paulo.freitas/workspaceCursos/Coursera/doc/allclasses-noframe.html...
Generating /home/paulo.freitas/workspaceCursos/Coursera/doc/index.html...
Generating /home/paulo.freitas/workspaceCursos/Coursera/doc/stylesheet.css...
1 warning
